fix background of about page on mobile

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1,7 +1,7 @@
 html, body {
   height: 100%;
   width: 100%;
-  /*background-color: #212121;*/
+  background-color: #212121;
 }
 
 /* The blue dot marker*/
@@ -130,6 +130,17 @@ img[src^='./app/images/icon_bludot.png'] {
   margin-bottom: 30px;
 }
 
+.logOutButton {
+  background: none;
+  position: absolute;
+  bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
+  left: 36%;
+  margin-bottom: 60px;
+  font-size: 14px;
+}
+
 .searchInput,
 .timeDropdown {
   width: 90%;
@@ -217,7 +228,7 @@ img[src^='./app/images/icon_bludot.png'] {
 }*/
 
 .aboutBody {
-  /*background-color: #f4fff4;*/
+  background-color: #212121;
   padding: 10px;
   padding-bottom: 50px;
 }
